<resources>
    <string name="app_name">GTNav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="show_station_switch_text">Show Bike Stations</string>
    <string name="show_racks_switch_text">Show Bike Racks</string>

    <!--Menu items strings-->
    <string name="map">Map</string>
    <string name="map_underline"><u>Map</u></string>
    <string name="directions">Directions</string>
    <string name="directions_underline"><u>Directions</u></string>
    <string name="bikes">Bikes</string>
    <string name="bikes_underline"><u>Bikes</u></string>
    <string name="buses">Buses</string>
    <string name="buses_underline"><u>Buses</u></string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>

    <string name="current_location">Current Location</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search&#8230;</string>

    <!--Bus Route Strings-->
    <string name="blue_route">Blue Route</string>
    <string name="red_route">Red Route</string>
    <string name="green_route">Green Route</string>
    <string name="tech_trolley">Tech Trolley</string>
    <string name="midnight_rambler">Midnight Rambler</string>
    <string name="tech_express">Tech Express</string>

    <!--Settings Strings-->
    <string name="setting_title"><b>Settings</b></string>
    <string name="default_routing">Default Routing Method</string>
    <string name="routing_walk">Walking</string>
    <string name="routing_bike">Biking</string>
    <string name="routing_bus">Buses</string>
    <string name="allow_location">Allow Location</string>

    <!--Feedback Strings-->
    <string name="email_text">Email (optional):</string>
    <string name="type_text">Issue Type</string>
    <string name="details_text">Additional Information</string>
    <string name="feedback_submit">Submit</string>

    <!--Scheduling Strings-->
    <string name="dialog_title">Add Event</string>
    <string name="name_prompt">Event name</string>
    <string name="location_prompt">Enter location</string>
    <string name="time_prompt">Select a time</string>
    <string name="repeat_prompt">Select repeated days</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="submit_creation">OK</string>
    <string name="cancel_creation">Cancel</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_event_time">Select event time</string>
    <string name="select_end_date">Select end date</string>

    <string name="title_activity_maps">Map</string>

    <!-- API keys-->
    <string name="mapbox_key">pk.eyJ1Ijoia2luZ3JhaGFtIiwiYSI6ImNqY204cTVjczAwa2oyd3FuZWtjeXFseG8ifQ.CQVMxRnXzzjoB6fhWiPLzw</string>
</resources>
