<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:id="@+id/nav_maingroup" android:checkableBehavior="all">
        <item
            android:id="@+id/nav_directions"
            android:icon="@drawable/ic_directions_arrow_black"
            android:checkable="true"
            android:title="@string/directions"/>
        <item
            android:id="@+id/nav_buses"
            android:icon="@drawable/ic_bus_black"
            android:checkable="true"
            android:title="@string/buses"/>
        <item
            android:id="@+id/nav_bikes"
            android:icon="@drawable/ic_bike_black"
            android:checkable="true"
            android:title="@string/bikes"/>
    </group>

    <group android:id="@+id/nav_schedulegroup" android:checkableBehavior="all">
        <item
            android:id="@+id/nav_schedule"
            android:checkable="true"
            android:icon="@drawable/ic_calendar_black"
            android:title="@string/schedule"/>
    </group>

    <group android:id="@+id/nav_miscgroup" android:checkableBehavior="all">
        <item
            android:id="@+id/nav_settings"
            android:checkable="true"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_black"/>
        <item
            android:id="@+id/nav_faq"
            android:checkable="true"
            android:title="@string/faq"
            android:icon="@drawable/ic_help_black"/>
        <item
            android:id="@+id/nav_feedback"
            android:checkable="true"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/feedback"/>
    </group>

</menu>
