<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_prompt" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location_prompt" />

    <EditText
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:clickable="true"
        android:longClickable="false"
        android:focusable="false"
        android:hint="@string/select_start_date"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_event_time"
        android:clickable="true"
        android:focusable="false"
        android:longClickable="false"
        android:focusableInTouchMode="false"
        android:inputType="time"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/repeat_prompt"/>

        <LinearLayout
            android:id="@+id/checkboxes_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckedTextView
                android:id="@+id/sunday_checkbox"
                android:drawableTop="@drawable/checkmark"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/repeat_checkbox_padding"
                android:paddingEnd="@dimen/repeat_checkbox_padding"
                android:text="@string/sunday" />

            <CheckedTextView
                android:id="@+id/monday_checkbox"
                android:drawableTop="@drawable/checkmark"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/repeat_checkbox_padding"
                android:paddingEnd="@dimen/repeat_checkbox_padding"
                android:text="@string/monday" />

            <CheckedTextView
                android:id="@+id/tuesday_checkbox"
                android:drawableTop="@drawable/checkmark"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/repeat_checkbox_padding"
                android:paddingEnd="@dimen/repeat_checkbox_padding"
                android:text="@string/tuesday" />

            <CheckedTextView
                android:id="@+id/wednesday_checkbox"
                android:drawableTop="@drawable/checkmark"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/repeat_checkbox_padding"
                android:paddingEnd="@dimen/repeat_checkbox_padding"
                android:text="@string/wednesday" />

            <CheckedTextView
                android:id="@+id/thursday_checkbox"
                android:drawableTop="@drawable/checkmark"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/repeat_checkbox_padding"
                android:paddingEnd="@dimen/repeat_checkbox_padding"
                android:text="@string/thursday" />

            <CheckedTextView
                android:id="@+id/friday_checkbox"
                android:drawableTop="@drawable/checkmark"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/repeat_checkbox_padding"
                android:paddingEnd="@dimen/repeat_checkbox_padding"
                android:text="@string/friday" />

            <CheckedTextView
                android:id="@+id/saturday_checkbox"
                android:drawableTop="@drawable/checkmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="@dimen/repeat_checkbox_padding"
                android:paddingStart="@dimen/repeat_checkbox_padding"
                android:text="@string/saturday"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:clickable="true"
        android:focusable="false"
        android:visibility="invisible"
        android:longClickable="false"
        android:hint="@string/select_end_date"/>

</LinearLayout>