<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spybug.gtnav.fragments.AddScheduleEventFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_prompt" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_prompt" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TimePicker
                    android:id="@+id/simpleTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="360dp"
                    android:timePickerMode="clock" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_prompt"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkBox7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.14"
                            android:text="@string/sunday" />

                        <CheckBox
                            android:id="@+id/checkBox8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/monday" />

                        <CheckBox
                            android:id="@+id/checkBox5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/tuesday" />

                        <CheckBox
                            android:id="@+id/checkBox6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/wednesday" />

                        <CheckBox
                            android:id="@+id/checkBox3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/thursday" />

                        <CheckBox
                            android:id="@+id/checkBox4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/friday" />

                        <CheckBox
                            android:id="@+id/checkBox2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.09"
                            android:text="@string/saturday" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
            <TableRow>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/schedule_padding"/>
            </TableRow>
        </TableLayout>


    </LinearLayout>

</FrameLayout>
