<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.spybug.gtnav.fragments.FeedbackFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"/>

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_text"/>

    <Spinner
        android:id="@+id/feedbackType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_text"/>

    <EditText
        android:id="@+id/detailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_padding" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_submit" />
</LinearLayout>
