<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             tools:context="com.spybug.gtnav.BottomNavbarFragment">

    <GridLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bottom_bar_border"
        android:columnCount="3"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:rowCount="1"
        android:useDefaultMargins="true">

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="50dp"
            android:layout_row="0"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/directions_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="false"
                android:background="@drawable/round_button"
                android:cropToPadding="false"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_directions_arrow_black"
                android:textAlignment="center"
                android:tint="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/directions"
                android:textAlignment="center"
                android:textSize="14sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buses_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="false"
                android:background="@drawable/round_button"
                android:cropToPadding="false"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_bus_black"
                android:textAlignment="center"
                android:tint="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/buses"
                android:textAlignment="center"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginEnd="50dp"
            android:layout_row="0"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bikes_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="false"
                android:background="@drawable/round_button"
                android:cropToPadding="false"
                android:padding="11dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_bike_black"
                android:textAlignment="center"
                android:tint="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/bikes"
                android:textAlignment="center"
                android:textSize="14sp"/>
        </LinearLayout>

    </GridLayout>

</FrameLayout>