<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.spybug.gtnav.BusesFragment">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <com.mapbox.mapboxsdk.maps.MapView android:id="@+id/mapView"
                                           xmlns:mapbox="http://schemas.android.com/apk/res-auto"
                                           android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           android:layout_marginBottom="-4dp"
                                           android:layout_above="@id/bottom_bar"
                                           mapbox:mapbox_cameraZoom="14"
                                           mapbox:mapbox_cameraZoomMin="11"
                                           mapbox:mapbox_cameraTargetLat="33.7756"
                                           mapbox:mapbox_cameraTargetLng="-84.3963"
                                           mapbox:mapbox_myLocation="true"
                                           mapbox:mapbox_uiTiltGestures="false"
                                           mapbox:mapbox_uiCompass="true"
                                           mapbox:mapbox_uiCompassMarginTop="75dp"
            />

        <GridLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bottom_bar_border"
            android:columnCount="3"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:rowCount="1"
            android:useDefaultMargins="true">

            <!-- Hardcoded as selected for demo purposes -->
            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="50dp"
                android:layout_row="0"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/directions_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="false"
                    android:background="@drawable/round_button"
                    android:cropToPadding="false"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_directions_arrow_black"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/directions"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_column="1"
                android:layout_row="0"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/buses_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="false"
                    android:background="@drawable/round_button_border"
                    android:cropToPadding="false"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_bus_black"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="@string/buses"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginEnd="50dp"
                android:layout_row="0"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/bikes_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="false"
                    android:background="@drawable/round_button"
                    android:cropToPadding="false"
                    android:padding="11dp"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_bike_black"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="@string/bikes"/>
            </LinearLayout>

        </GridLayout>
    </RelativeLayout>

</FrameLayout>
